== Version History ==

x.x:

0.4 ():
 - Moved timeline back into admin context (requires Elgg 1.8.7)


0.3 (06/08/2012):

 - Initial Release: timeline functions